k8s/simpleapp/020-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: isis-app-simpleapp
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: isis-app-simpleapp
