k8s/simpleapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-simpleapp
spec:
  selector:
    matchLabels:
      app: app-simpleapp
  replicas: 1
  template:
    metadata:
      labels:
        app: app-simpleapp
    spec:
      containers:
        - image: apacheisis/simpleapp:latest
          imagePullPolicy: Always
          name: app-simpleapp
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-simpleapp
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: app-simpleapp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-simpleapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - simpleapp.isis.incode.work
      secretName: app-simpleapp-tls
  rules:
    - host: simpleapp.isis.incode.work
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app-simpleapp
                port:
                  number: 80
